--- a/WPFUI/MainWindow.xaml
+++ b/WPFUI/MainWindow.xaml
@@ -31,24 +31,47 @@
 
         <TextBlock Grid.Column="1" Grid.Row="1" FontSize="18" Grid.ColumnSpan="2">Bagage Sorting</TextBlock>
         <TextBlock Grid.Column="1" Grid.Row="2" FontSize="11" Margin="10">Passengers</TextBlock>
-        <ListBox x:Name="Passengers" Grid.Column="1"  Grid.Row="3" Grid.RowSpan="5" Margin="5"></ListBox>
+        <DataGrid ItemsSource="{Binding Current_IncomingPassengers.PassengersToCheckInList}" AutoGenerateColumns="False" HeadersVisibility="Column" Grid.Column="1"  Grid.Row="3" Grid.RowSpan="5" Margin="5">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+            </DataGrid.Columns>
+        </DataGrid>
 
+        
         <Button x:Name="CheckInPlusButton" Click="OnClick_OpenCheckIn" Grid.Column="2" Grid.Row="2" Content="+" Width="20" Height="20" HorizontalAlignment="Center" Margin="5" ></Button>
         <Button x:Name="CheckInMinusButton" Click="OnClick_CloseCheckIn" Grid.Column="2" Grid.Row="2" Content="-" Width="20" Height="20" HorizontalAlignment="Center" Margin="95,0,30,0" ></Button>
         <TextBlock Grid.Column="2" Grid.Row="2" FontSize="11" Margin="10">Check Ins</TextBlock>
-        <ListBox x:Name="CheckIn" Grid.Column="2"  Grid.Row="3" Margin="5"></ListBox>
+        <DataGrid ItemsSource="{Binding Current_Controller_CheckIn.CheckInArray[0].BagageArray.IsFixedSize}" AutoGenerateColumns="False" HeadersVisibility="Column" Grid.Column="2"  Grid.Row="3" Margin="5">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name }"/>
+            </DataGrid.Columns>
+        </DataGrid>
+         
+        
 
         <TextBlock Grid.Column="3" Grid.Row="2" FontSize="11" Margin="10">Conveyour/Sorter</TextBlock>
-        <ListBox x:Name="Conveyor" Grid.Column="3"  Grid.Row="3" Grid.RowSpan="5" Margin="5"></ListBox>
-
+        <DataGrid ItemsSource="{Binding Current_ConveyorBelt.Conveyor.IsFixedSize}" AutoGenerateColumns="False" HeadersVisibility="Column" Grid.Column="3"  Grid.Row="3" Grid.RowSpan="5" Margin="5">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        
+        
         <Button x:Name="GatePlusButton" Click="OnClick_OpenGate" Grid.Column="4" Grid.Row="2" Content="+" Width="20" Height="20" HorizontalAlignment="Center" Margin="0,0,30,0" ></Button>
         <Button x:Name="GateMinusButton" Click="OnClick_CloseGate" Grid.Column="4" Grid.Row="2" Content="-" Width="20" Height="20" HorizontalAlignment="Center" Margin="65,0,30,0" ></Button>
         <TextBlock  Grid.Column="4" Grid.Row="2" FontSize="11" Margin="10">Gate</TextBlock>
-        <ListBox ItemsSource="{Binding IncomingPassengers.PassengersToCheckInList}" x:Name="Gate" Grid.Column="4"  Grid.Row="3" Margin="5"></ListBox>
-
+        <DataGrid ItemsSource="{Binding Current_Controller_Gate.GateArray[0].BagageArray.IsFixedSize}" AutoGenerateColumns="False" HeadersVisibility="Column" Grid.Column="4"  Grid.Row="3" Margin="5">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+            </DataGrid.Columns>
+        </DataGrid>
         <TextBlock Grid.Column="5" Grid.Row="2" FontSize="11" Margin="10">Plane</TextBlock>
-        <ListView x:Name="Plane" Grid.Column="5"  Grid.Row="3" Margin="5"></ListView>
-
+        <DataGrid ItemsSource="{Binding Current_IncomingPassengers.PassengersToCheckInList}" AutoGenerateColumns="False" HeadersVisibility="Column" Grid.Column="5"  Grid.Row="3" Margin="5">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        
 
     </Grid>
 </Window>
