--- a/WPFUI/MainWindow.xaml
+++ b/WPFUI/MainWindow.xaml
@@ -24,18 +24,19 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="1" Grid.Row="1" FontSize="18" Grid.ColumnSpan="2">Bagage Sorting</TextBlock>
         <TextBlock Grid.Column="1" Grid.Row="2" FontSize="11" Margin="10">Passengers</TextBlock>
-        <DataGrid ItemsSource="{Binding Current_IncomingPassengers.PassengersToCheckInList}" AutoGenerateColumns="False" HeadersVisibility="Column" Grid.Column="1"  Grid.Row="3" Grid.RowSpan="5" Margin="5">
+        <DataGrid ItemsSource="{Binding PassengerList}" AutoGenerateColumns="False" HeadersVisibility="Column" Grid.Column="1"  Grid.Row="3" Grid.RowSpan="5" Margin="5">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
             </DataGrid.Columns>
         </DataGrid>
+        <Button x:Name="Start" Content="Start" Grid.Column="1" Grid.Row="7" Margin="5" Click="Start_Click"></Button>
 
         
         <Button x:Name="CheckInPlusButton" Click="OnClick_OpenCheckIn" Grid.Column="2" Grid.Row="2" Content="+" Width="20" Height="20" HorizontalAlignment="Center" Margin="5" ></Button>
